Fix nav arrow layour and logo overflow (#4)

--- a/css-compiled/theme.css
+++ b/css-compiled/theme.css
@@ -1,4 +1,3 @@
-@charset "UTF-8";
 @import url(//fonts.googleapis.com/css?family=Montserrat:400|Muli:300,400|Inconsolata);
 #body #breadcrumbs, #top-github-link {
   position: relative;
@@ -58,14 +57,14 @@ fieldset {
 textarea, input[type=email], input[type=number], input[type=password], input[type=search], input[type=tel], input[type=text], input[type=url], input[type=color], input[type=date], input[type=datetime], input[type=datetime-local], input[type=month], input[type=time], input[type=week], select[multiple=multiple] {
   background-color: white;
   border: 1px solid #ddd;
-  box-shadow: inset 0 1px 3px rgba(0, 0, 0, 0.06);
+  box-shadow: inset 0 1px 3px hsla(0deg, 0%, 0%, 0.06);
 }
 textarea:hover, input[type=email]:hover, input[type=number]:hover, input[type=password]:hover, input[type=search]:hover, input[type=tel]:hover, input[type=text]:hover, input[type=url]:hover, input[type=color]:hover, input[type=date]:hover, input[type=datetime]:hover, input[type=datetime-local]:hover, input[type=month]:hover, input[type=time]:hover, input[type=week]:hover, select[multiple=multiple]:hover {
   border-color: #c4c4c4;
 }
 textarea:focus, input[type=email]:focus, input[type=number]:focus, input[type=password]:focus, input[type=search]:focus, input[type=tel]:focus, input[type=text]:focus, input[type=url]:focus, input[type=color]:focus, input[type=date]:focus, input[type=datetime]:focus, input[type=datetime-local]:focus, input[type=month]:focus, input[type=time]:focus, input[type=week]:focus, select[multiple=multiple]:focus {
   border-color: #54667A;
-  box-shadow: inset 0 1px 3px rgba(0, 0, 0, 0.06), 0 0 5px rgba(74, 89, 107, 0.7);
+  box-shadow: inset 0 1px 3px hsla(0deg, 0%, 0%, 0.06), 0 0 5px rgba(74, 89, 107, 0.7);
 }
 
 #header {
@@ -78,7 +77,7 @@ textarea:focus, input[type=email]:focus, input[type=number]:focus, input[type=pa
   display: inline-block;
 }
 #header #logo-svg {
-  width: 12rem;
+  width: 100%;
   height: 3rem;
 }
 .searchbox {
@@ -330,6 +329,10 @@ textarea:focus, input[type=email]:focus, input[type=number]:focus, input[type=pa
     padding: 5px 1rem;
   }
 }
+#body .fixed-size-content {
+  max-width: 900px;
+  margin: auto;
+}
 #body h1 + hr {
   margin-top: -1.7rem;
   margin-bottom: 3rem;
@@ -486,7 +489,7 @@ blockquote > blockquote > blockquote p:first-child:before {
   top: 2px;
   color: #fff;
   font-family: FontAwesome;
-  content: "";
+  content: "\f06a";
   left: 10px;
 }
 blockquote > blockquote > blockquote p:first-child:after {
@@ -1089,7 +1092,6 @@ td {
   #sidebar {
     width: 230px;
   }
-
   #body {
     margin-left: 230px;
   }
@@ -1099,12 +1101,10 @@ td {
     width: 230px;
     left: -230px;
   }
-
   #body {
     margin-left: 0;
     width: 100%;
   }
-
   .sidebar-hidden {
     overflow: hidden;
   }
