--- a/css/custom.css
+++ b/css/custom.css
@@ -13,8 +13,6 @@ body {
 		color: #444;
 		letter-spacing: 0.01rem;
 		-webkit-text-size-adjust: 100%;
-		max-width: 1200px;
-		margin: auto;
 }
 
 h1 {
