--- a/scss/theme/_configuration.scss
+++ b/scss/theme/_configuration.scss
@@ -19,7 +19,7 @@ $font-weight-regular: 400;
 $body-margin: 4rem;
 
 // Logo
-$logo-width: 12rem;
+$logo-width: 100%;
 $logo-height: 3rem;
 
 // Standard Colors
